--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
-spring.application.name=curso-microservicios-spring-microservicio-cursos
+#Config Erueka Client
+spring.application.name=curso-microservicios-spring-microservicio-usuarios
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+
+#Config Eureka Server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Ajustes de lease
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=30
+
+## Configuracion base de Datos
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA e Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.generate-ddl=true
+
+# Configuración de logging
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
