--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.curso.microservicios.spring.generic.alumnos</groupId>
+			<artifactId>
+				curso-microservicios-spring-microservicio-generic-alumnos</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.curso.microservicios.spring.commons</groupId>
 			<artifactId>curso-microservicios-spring-microservicio-commons</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
